# plsr-cpp

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  main.cpp
include/: DataGenerator.hpp  PLSR.hpp  ResponseGenerator.hpp  bspline.hpp  fourier.hpp
src/: DataGenerator.cpp  PLSR.cpp  ResponseGenerator.cpp  bspline.cpp  fourier.cpp
tests/: test_DataGenerator.cpp  test_PLSR.cpp  test_ResponseGenerator.cpp  test_bspline.cpp  test_fourier.cpp
